Added mahatara caste

--- a/index.html
+++ b/index.html
@@ -714,6 +714,7 @@
 712. Yonjan &gt; Tamang<br />
 713. Yorka &gt; Tamang<br />
 714. Zimba &gt; Tamang<br />
-715. </p>
+715. Mahatara &gt; chhetri <br />
+716.</p>
 </body>
 </html>
